--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,14 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  
+<!-- As a heading -->
+<nav class="navbar navbar-light bg-faded">
+  <h1 class="navbar-brand mb-0">Flixter</h1>
+</nav>
 
   <body>
     <%= yield %>
   </body>
 </html>
+
