--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,15 +1,52 @@
 @import "bootstrap";
 
+h1, h2, h3, h4, h5, h6, .navbar {
+  margin: 0;
+}
+
 .navbar {
-  font-family: "Helvetica Neue", Helvetica;
+  font-family: 'nobileregular';
   font-weight: 200;
   box-shadow: 0px 1px 3px #2a2a2a;
-  color: white;
-  background: image_url('circle-blues.png');
-  }
+  background: image_url('tree_bark.png');
+}
 
 .navbar-inverse a.navbar-brand {
+  font-family: 'nobileregular';
+  font-weight: 600;
+  color: #337FC1;
+  font-size: 26px;
+}
+
+
+
+.hero {
+  background: image_url('hero.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 800px;
+  box-shadow: 0px 3px 8px #2a2a2a;
+}
+
+.frosty {
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+}
+
+.frosty h1 {
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
-  color: white;
+  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+}
+
+.frosty h2 {
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 200;
+  text-shadow: rgba (0, 0, 0, 0.95) 1 px 1px;
+}
+
+.btn {
+  border-radius: 0;
 }
