finish landing page

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -7,6 +7,18 @@
     <h2>I'm an Illusionist, Michael.</h2>
     <br/>
     <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
-    <br/>
+<br/>
+<br/>
+<div class="row feature text-center">
+  <div class="col-12 col-sm">
+    <h3>Amazing Courses</h3>
+  </div>
+
+  <div class="col-12 col-sm">
+    <h3>Learn at Your Own Pace</h3>
+  </div>
+
+  <div class="col-12 col-sm">
+    <h3>Join our Community</h3>
   </div>
 </div>
