--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,11 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
           <li class="nav-item">
-            <%= link_to static_pages_path, class 'nav-link' do %>
+            <%= link_to 'Home', root_path, class: 'nav-link' %>
           </li>
         </ul>
         <ul class="navbar-nav">
-          <%if user_signed in? %>
+          <%if user_signed_in? %>
             <li class="nav-item">
               <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link'%>
             </li>
@@ -49,4 +49,3 @@
     <%= yield %>
   </body>
 </html>
-<% end %>
