--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
           <li class="nav-item">
-            <%= link_to 'Home', root_path, class: 'nav-link' %>
+            <%= link_to 'See all Courses', root_path, class: 'nav-link' %>
           </li>
         </ul>
         <ul class="navbar-nav">
