still working on carrierwave

--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -8,6 +8,9 @@
     <br />
     <%= f.submit "Create", class: 'btn btn-primary' %>
     <br />
+    <%= f. input :image %>
+    <br />
+    <%= f.submit "Upload Video", class: 'btn btn-primary' %>
   <% end %>
   <br/>
 </div>
