--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -23,7 +23,7 @@
 
   <div class="col-12">
     <% @course.sections.each do |section| %>
-    <%= image_tag @course.image.url, class: 'img-fluid' %>
+    <%= image_tag @course.image.to_s, class: 'img-fluid' %>
       <div class="section">
         <%= section.title %>
         <%= section.lessons.each do |lesson| %>
