--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,18 +1,7 @@
 <script>
-  $(function() {
-    $('.lessons').sortable({
-      update: function( event, ui ) {
-        $.ajax({
-          type: 'PUT',
-          url: ui.item.data('update-url'),
-          dataType: 'json',
-          data: { lesson: { row_order_position: ui.item.index() } }
-        });
-      }
-    });
-   });
+  alert('hi');
 </script>
-
+    
 <br/>
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center"><%= current_course.title %></h1>
@@ -24,7 +13,7 @@
     <%= link_to 'Add a new section', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
   </div>
 
-  <ul>
+  <ul class= "sections">
     <% current_course.sections.each do |section| %>
       <li>
         <%= section.title %>
