--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <link href="http://vjs.zencdn.net/5.12.6/video-js.css" rel="stylesheet">
   </head>
   <body>
+    
     <div id="flex-content-container">
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,22 +65,16 @@
         <%= link_to 'My Dashboard', dashboard_path %>
       </div>
       <div class="col-12 col-sm-3">
-        <b>About</b>
         <br />
-        <%= link_to 'Team', '#' %>
-        <br />
-        <%= link_to 'Careers', '#' %>
-        <br />
-        <%= link_to 'Privacy Policy', '#' %>
+        <%= link_to 'Privacy Policy', privacy_path %>
       </div>
       <div class="col-12 col-sm-3">
         <b>Contact</b>
         <br />
-        my@email.com
+        Evan Goldman
         <br />
-        One Kendall Square
+        pitlere@yahoo.com
         <br />
-        Cambridge MA, 02113
       </div>
       <div class="col-12 col-sm-3 social">
         <b>Social</b>
@@ -91,13 +86,10 @@
         <%= link_to 'https://www.facebook.com/' do %>
           <span class="fa fa-facebook-square fa-2x social-button"></span>
         <% end %>
-        <% link_to 'https://twitter.com/' do %>
-          <span class="fa fa-twitter-square fa-2x social-button"></span>
-        <% end %>
-          </div>
-        </div>
       </div>
-    </div>
+      </div>
+      </div>
+      </div>
 
     <script src="http://vjs.zencdn.net/5.12.6/video.js"></script>
     <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
